--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "https://github.com/condein/todo-app-react/tree/master/public",
   "name": "todo",
   "private": true,
   "version": "0.0.0",
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "vite": "^5.0.8"
   }
 }
